--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,82 +1,94 @@
 <%- include("partials/header") %>
 
-    <section>
-        <div class="container-fluid no-gutters p-0">
-            <div class="row no-gutters align-items-center content">
-                <div class="col-lg-6">
-                    <div id="headingGroup" class="text-center text-white d-none d-lg-block mt-5">
-                        <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
-                        <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
-                        <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
-                        <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
-                        <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
-                        <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
-                        <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
-                        <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
-                    </div>
+<section>
+    <div class="container-fluid no-gutters p-0">
+        <div class="row no-gutters align-items-center content">
+            <div class="col-lg-6">
+                <div id="headingGroup" class="text-center text-white d-none d-lg-block mt-5">
+                    <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
+                    <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
+                    <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
+                    <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
+                    <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
+                    <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
+                    <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
+                    <h1>CUP<span>/</span>&<span>/</span>CONE</h1>
                 </div>
-                    <div class="col-lg-6"><img class="img-fluid img-thumbnail" src="/images/home1.png" alt="Yellow ice cream in a cone.">
-                    </div>
+            </div>
+            <div class="col-lg-6"><img class="img-fluid img-thumbnail" src="/images/home1.png"
+                    alt="Yellow ice cream in a cone.">
             </div>
         </div>
-    </section> 
-    
+    </div>
+</section>
 
-    <section class="mt-5">
-        <div class="container-fluid no-gutters p-0">
-            <div class="row no-gutters align-items-center content">
-                <div class="col-md-6 order-2 order-md-1 pt-5">
-                    <img class="img-fluid img-thumbnail" src="images/home2.png" alt="Ice cream sundae with chocolate powder on top">
-                </div>
-                <div class="col-md-6 order-1 order-md-2">
-                    <div class="row align-items-center justify-content-center mx-0">
-                        <div class="blurb text-center col-10 col-lg-8">
-                            <h2>ELEGANT</h2>
-                            <hr class="slash-1">
-                            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis.</p>
-                        </div>
-                    </div>
-                </div>      
-            </div>
-        </div>
-    </section>
-    
-    <section class="mt-5">
-        <div class="container-fluid no-gutters px-0">
-            <div class="row no-gutters align-items-center content">
-                <div class="col-md-6">
-                    <div class="row align-items-center justify-content-center mx-0">
-                        <div class="blurb text-center col-10 col-lg-8">
-                            <h2>CHARMING</h2>
-                            <hr class="slash-1">
-                            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis.</p>
-                        </div>
-                    </div>                   
-                </div>
-                <div class="col-md-6 pt-5">
-                    <img class="img-fluid img-thumbnail" src="/images/home3.png" alt="Rainbow colored ice cream sundae.">
-                </div>                    
-            </div>
-        </div>
-    </section>
 
-    <section class="my-5">
-        <div class="container-fluid no-gutters px-0">
-            <div class="row no-gutters align-items-center content">
-                <div class="col-md-6 order-2 order-md-1 pt-5">
-                    <img class="img-fluid img-thumbnail" src="/images/home4.png" alt="Rainbow colored ice cream sundae." alt="Three scoops of yellow ice cream in a bowl.">
-                </div>
-                <div class="col-md-6 order-1 order-md-2">
-                    <div class="row align-items-center justify-content-center mx-0">
-                        <div class="blurb text-center col-10 col-lg-8">
-                            <h2>SIMPLISTIC</h2>
-                            <hr class="slash-1">
-                            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis.</p>
-                        </div>
+<section class="mt-5">
+    <div class="container-fluid no-gutters p-0">
+        <div class="row no-gutters align-items-center content">
+            <div class="col-md-6 order-2 order-md-1 pt-5">
+                <img class="img-fluid img-thumbnail" src="images/home2.png"
+                    alt="Ice cream sundae with chocolate powder on top">
+            </div>
+            <div class="col-md-6 order-1 order-md-2">
+                <div class="row align-items-center justify-content-center mx-0">
+                    <div class="blurb text-center col-10 col-lg-8">
+                        <h2>ELEGANT</h2>
+                        <hr class="slash-1">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae
+                            beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta?
+                            Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus
+                            dolorum delectus minus vitae, ut, veritatis.</p>
                     </div>
-                </div>  
+                </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+<section class="mt-5">
+    <div class="container-fluid no-gutters px-0">
+        <div class="row no-gutters align-items-center content">
+            <div class="col-md-6">
+                <div class="row align-items-center justify-content-center mx-0">
+                    <div class="blurb text-center col-10 col-lg-8">
+                        <h2>CHARMING</h2>
+                        <hr class="slash-1">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae
+                            beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta?
+                            Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus
+                            dolorum delectus minus vitae, ut, veritatis.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 pt-5">
+                <img class="img-fluid img-thumbnail" src="/images/home3.png" alt="Rainbow colored ice cream sundae.">
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="my-5">
+    <div class="container-fluid no-gutters px-0">
+        <div class="row no-gutters align-items-center content">
+            <div class="col-md-6 order-2 order-md-1 pt-5">
+                <img class="img-fluid img-thumbnail" src="/images/home4.png" alt="Rainbow colored ice cream sundae."
+                    alt="Three scoops of yellow ice cream in a bowl.">
+            </div>
+            <div class="col-md-6 order-1 order-md-2">
+                <div class="row align-items-center justify-content-center mx-0">
+                    <div class="blurb text-center col-10 col-lg-8">
+                        <h2>SIMPLISTIC</h2>
+                        <hr class="slash-1">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae
+                            beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta?
+                            Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus
+                            dolorum delectus minus vitae, ut, veritatis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <%- include("partials/footer") %>
