--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,13 +7,14 @@
             <hr class="slash-1" />
             <form>
                 <div class="form-group">
-                    <label id="newsletter" for="email">Join out mailing list to keep up to date with our future events. Never know where we might pop up next!</label>
+                    <label id="newsletter" for="email">Join out mailing list to keep up to date with our future events.
+                        Never know where we might pop up next!</label>
                     <input type="email" class="form-control" id="email" placeholder="name@example.com">
                 </div>
                 <button id="submit" class="btn" type="submit">Submit</button>
             </form>
         </article>
-        
+
         <article class="col-md-10 col-lg-6 px-0">
             <div id="postContainer" class="post blurb">
                 <div class="pb-2">
@@ -22,20 +23,21 @@
                 <h2 id="postTitle">Post Example</h2>
                 <hr class="slash-1">
                 <p id="postDesc" class="lead">Description will also appear in the "Blurbs" section!</p>
-                <p id="postContent" class="lead">Please use the form below to replace this post with your own. The announcements page can also be easily connected to a CMS like Netlify for broader control.</p>
+                <p id="postContent" class="lead">Please use the form below to replace this post with your own. The
+                    announcements page can also be easily connected to a CMS like Netlify for broader control.</p>
             </div>
             <div class="post">
                 <form id="postForm" action="#">
                     <label id="image-submit" for="image">Enter an image URL (Optional):</label>
-                    <input type="text" name="imageUrl"/>
-                    
+                    <input type="text" name="imageUrl" />
+
                     <label id="title" for="title">Title:</label>
-                    <input type="text" name="title" required/>
+                    <input type="text" name="title" required />
 
                     <hr class="slash-1">
 
                     <label id="description">Description:</label>
-                    <input type="text" name="description" required/>
+                    <input type="text" name="description" required />
 
                     <label id="content" for="content">Content:</label>
                     <textarea type="text" name="content" required></textarea>
@@ -58,5 +60,7 @@
         </article>
     </div>
 </section>
+
 <script src="/js/postAnnouncement.js"></script>
+
 <%- include("partials/footer") %>
