--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,26 +1,27 @@
 <section id="footer" class="container-fluid mt-auto">
     <div class="row text-center py-1">
-            <p id="tooltip" class="col-xs-12 col-sm-3 mb-0">Site Info
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-info-circle" fill="currentColor"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                        d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                    <path
-                        d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z" />
-                    <circle cx="8" cy="4.5" r="1" />
-                </svg>
-                <span class="tooltip-text">
-                    HTML - EJS Templating
-                    <br />
-                    CSS - SASS/Bootstrap
-                    <br />
-                    Node.js - Express
-                    <br />
-                    All images courtesy of <a href="https://unsplash.com/">Unsplash</a> & <a href="https://www.vecteezy.com/free-vector/shop">Vecteezy</a>
-                </span>
-            </p>
-            <p class="col-xs-12 col-sm-3 order-sm-2 mb-0">Portfolio Project</p>
-            <p id="footer-email" class="col-xs-12 col-sm-6 mb-1 order-sm-1 mb-0">Created By Lance Avitia - MonocledDesign@gmail.com</p>
+        <p id="tooltip" class="col-xs-12 col-sm-3 mb-0">Site Info
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-info-circle" fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                <path
+                    d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z" />
+                <circle cx="8" cy="4.5" r="1" />
+            </svg>
+            <span class="tooltip-text">
+                HTML - EJS Templating
+                <br />
+                CSS - SASS/Bootstrap
+                <br />
+                Node.js - Express
+                <br />
+                All images courtesy of <a href="https://unsplash.com/">Unsplash</a> & <a
+                    href="https://www.vecteezy.com/free-vector/shop">Vecteezy</a>
+            </span>
+        </p>
+        <p class="col-xs-12 col-sm-3 order-sm-2 mb-0">Portfolio Project</p>
+        <p id="footer-email" class="col-xs-12 col-sm-6 mb-1 order-sm-1 mb-0">Created By Lance Avitia -
+            MonocledDesign@gmail.com</p>
     </div>
 </section>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -33,6 +34,6 @@
     crossorigin="anonymous"></script>
 <script src="/js/headerHandler.js"></script>
 <script src="/js/submitHandler.js"></script>
-</body>
 
+    </body>
 </html>
