--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -21,7 +21,7 @@
         </p>
         <p class="col-xs-12 col-sm-3 order-sm-2 mb-0">Portfolio Project</p>
         <p id="footer-email" class="col-xs-12 col-sm-6 mb-1 order-sm-1 mb-0">Created By Lance Avitia -
-            MonocledDesign@gmail.com</p>
+            <a id="site-link" href="https://www.lanceadev.com/" >LanceADev.com</a></p>
     </div>
 </section>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
